--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="style/style.css"/>
 </head>
 <body>
+    <!-- HTML Validator Logo -->
+    <div id="validator_logo">
+        <a href="https://validator.w3.org/nu/?doc=https://anizzzzzzzz.github.io/cs472">
+            <img alt="Validator Image" src="https://manalabs.org/img/w3c-html.png"/>
+        </a>
+    </div>
+
     <!-- Body of the page -->
     <div id="content">
         <!-- Details Section -->
@@ -69,11 +76,6 @@
                     <li><a href="#">W1D2 - About Me</a></li>
                 </ul>
             </div>
-        </div>
-
-        <!-- HTML Validator Logo -->
-        <div id="validator_logo">
-
         </div>
     </div>
 </body>
