--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <tr>
                         <td class="label">Email</td>
                         <td class="divider">:</td>
-                        <td class="data">amaharjan@miu.edu</td>
+                        <td class="data"><a href="mailto:amaharjan@miu.edu">amaharjan@miu.edu</a></td>
                     </tr>
                     <tr>
                         <td class="label">Street Name</td>
