changed url of github

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- HTML Validator Logo -->
     <div id="validator_logo">
-        <a href="https://validator.w3.org/nu/?doc=https://anizzzzzzzz.github.io/cs472">
+        <a href="https://validator.w3.org/nu/?doc=https://anmaharjan.github.io/">
             <img alt="Validator Image" src="https://manalabs.org/img/w3c-html.png"/>
         </a>
     </div>
