--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
     <link rel="stylesheet" href="style/style.css"/>
 </head>
 <body>
-    <!-- HTML Validator Logo -->
-    <div id="validator_logo">
-        <a href="https://validator.w3.org/nu/?doc=https://anmaharjan.github.io/">
-            <img alt="Validator Image" src="https://manalabs.org/img/w3c-html.png"/>
-        </a>
-    </div>
-
     <!-- Body of the page -->
     <div id="content">
         <!-- Details Section -->
@@ -73,10 +66,21 @@
             <div class="content">
                 <ul>
                     <li><a href="#">W1D1 - Homepage</a></li>
-                    <li><a href="#">W1D2 - About Me</a></li>
+                    <li><a href="aboutme.html">W1D2 - About Me</a></li>
                 </ul>
             </div>
         </div>
+    </div>
+
+    <!-- HTML and CSS Validation -->
+    <div id="validator_logo">
+        <a href="https://validator.w3.org/nu/?doc=https://anmaharjan.github.io/">
+            <img alt="HTML Validator Image" src="https://manalabs.org/img/w3c-html.png"/>
+        </a>
+
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://anmaharjan.github.io/">
+            <img alt="CSS Validator Image" src="https://manalabs.org/img/w3c-css.png"/>
+        </a>
     </div>
 </body>
 </html>
