added some extra info

--- a/aboutme.html
+++ b/aboutme.html
@@ -83,6 +83,32 @@
                             <span>(<a href="https://www.imdb.com/title/tt0111161/">IMDB</a>)</span>
                         </div>
                     </li>
+                    <dl class="movie-info">
+                        <dt>Director</dt>
+                        <dd>
+                            <ul>
+                                <li>Frank Darabont</li>
+                            </ul>
+                        </dd>
+                        <dt>Writers</dt>
+                        <dd>
+                            <ul>
+                                <li>Stephen King</li>
+                                <li>Frank Darabont</li>
+                            </ul>
+                        </dd>
+                        <dt>Stars</dt>
+                        <dd>
+                            <ul>
+                                <li>Tim Robbins</li>
+                                <li>Morgan Freeman</li>
+                            </ul>
+                        </dd>
+                        <dt>Released</dt>
+                        <dd>1994</dd>
+                        <dt>Rating</dt>
+                        <dd>9.3/10</dd>
+                    </dl>
 
                     <li>
                         <div class="label tooltip">Batman Begins
