--- a/aboutme.html
+++ b/aboutme.html
@@ -165,6 +165,32 @@
                             <span class="tooltiptext">Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</span>
                             <span>(<a href="https://www.imdb.com/title/tt0111161/">IMDB</a>)</span>
                         </div>
+                        <dl class="movie-info">
+                            <dt>Director</dt>
+                            <dd>
+                                <ul>
+                                    <li>Frank Darabont</li>
+                                </ul>
+                            </dd>
+                            <dt>Writers</dt>
+                            <dd>
+                                <ul>
+                                    <li>Stephen King</li>
+                                    <li>Frank Darabont</li>
+                                </ul>
+                            </dd>
+                            <dt>Stars</dt>
+                            <dd>
+                                <ul>
+                                    <li>Tim Robbins</li>
+                                    <li>Morgan Freeman</li>
+                                </ul>
+                            </dd>
+                            <dt>Released</dt>
+                            <dd>1994</dd>
+                            <dt>Rating</dt>
+                            <dd>9.3/10</dd>
+                        </dl>
                     </li>
                 </ol>
             </div>
