--- a/aboutme.html
+++ b/aboutme.html
@@ -233,11 +233,11 @@
 
     <!-- HTML and CSS Validation -->
     <div id="validator_logo">
-        <a href="https://validator.w3.org/nu/?doc=https://anmaharjan.github.io/aboutme.html">
+        <a href="https://validator.w3.org/nu/?doc=https://anmaharjan.github.io/aboutme.html" target="_blank">
             <img alt="HTML Validator Image" src="https://manalabs.org/img/w3c-html.png"/>
         </a>
 
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://anmaharjan.github.io/aboutme.html">
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://anmaharjan.github.io/aboutme.html" target="_blank">
             <img alt="CSS Validator Image" src="https://manalabs.org/img/w3c-css.png"/>
         </a>
     </div>
