--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <ul>
                     <li><a href="#">W1D1 - Homepage</a></li>
                     <li><a href="aboutme.html">W1D2 - About Me</a></li>
+                    <li><a href="w1d2recipe/pie.html">W1D2 - Recipe</a></li>
                 </ul>
             </div>
         </div>
@@ -74,11 +75,11 @@
 
     <!-- HTML and CSS Validation -->
     <div id="validator_logo">
-        <a href="https://validator.w3.org/nu/?doc=https://anmaharjan.github.io/">
+        <a href="https://validator.w3.org/nu/?doc=https://anmaharjan.github.io/" target="_blank">
             <img alt="HTML Validator Image" src="https://manalabs.org/img/w3c-html.png"/>
         </a>
 
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://anmaharjan.github.io/">
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://anmaharjan.github.io/" target="_blank">
             <img alt="CSS Validator Image" src="https://manalabs.org/img/w3c-css.png"/>
         </a>
     </div>
