--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <ul>
                     <li><a href="#">W1D1 - Homepage</a></li>
                     <li><a href="aboutme.html">W1D2 - About Me</a></li>
-                    <li><a href="w1d2recipe/pie.html">W1D2 - Recipe</a></li>
+                    <li><a href="w1d2recipe">W1D2 - Recipe</a></li>
                 </ul>
             </div>
         </div>
