--- a/w1d2recipe/index.html
+++ b/w1d2recipe/index.html
@@ -126,11 +126,11 @@ Copyright @ 2012 Granny's Pies
         </div>
 
         <div class="validation">
-            <a href="http://validator.w3.org/nu/?doc=https://anmaharjan.github.io/w1d2recipe/pie.html" target="_blank">
+            <a href="http://validator.w3.org/nu/?doc=https://anmaharjan.github.io/w1d2recipe" target="_blank">
                 <img src="https://manalabs.org/img/w3c-html.png" alt="HTML validator icon" />
             </a>
 
-            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://anmaharjan.github.io/w1d2recipe/pie.html" target="_blank">
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://anmaharjan.github.io/w1d2recipe" target="_blank">
                 <img src="https://manalabs.org/img/w3c-css.png" alt="CSS validator icon" />
             </a>
         </div>
