completed movie review

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                     <li><a href="#">W1D1 - Homepage</a></li>
                     <li><a href="aboutme.html">W1D2 - About Me</a></li>
                     <li><a href="w1d2recipe">W1D2 - Recipe</a></li>
+                    <li><a href="w1d3mum-exercise">W1D3 - Exercises</a></li>
+                    <li><a href="w1d3movie-layout">W1D2 - Movie Layout</a></li>
                 </ul>
             </div>
         </div>
