completed layout assignment

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                     <li><a href="aboutme.html">W1D2 - About Me</a></li>
                     <li><a href="w1d2recipe">W1D2 - Recipe</a></li>
                     <li><a href="w1d3mum-exercise">W1D3 - Exercises</a></li>
-                    <li><a href="w1d3movie-layout">W1D2 - Movie Layout</a></li>
+                    <li><a href="w1d3movie-layout">W1D3 - Movie Layout</a></li>
+                    <li><a href="w1d4-layout-grid-flexbox">W1D4 - Layout with Grid and Flexbox</a></li>
+                    <li><a href="w1d4-layout-bootstrap">W1D4 - Layout with Bootstrap</a></li>
                 </ul>
             </div>
         </div>
