--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <li><a href="w1d3movie-layout">W1D3 - Movie Layout</a></li>
                     <li><a href="w1d4-layout-grid-flexbox">W1D4 - Layout with Grid and Flexbox</a></li>
                     <li><a href="w1d4-layout-bootstrap">W1D4 - Layout with Bootstrap</a></li>
+                    <li><a href="w1d5-basic-javascript">W1D5 - Basic JavaScript Assignment</a></li>
                 </ul>
             </div>
         </div>
