--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <li><a href="w1d4-layout-grid-flexbox">W1D4 - Layout with Grid and Flexbox</a></li>
                     <li><a href="w1d4-layout-bootstrap">W1D4 - Layout with Bootstrap</a></li>
                     <li><a href="w1d5-basic-javascript">W1D5 - Basic JavaScript Assignment</a></li>
+                    <li><a href="w1d6-animation">W1D6 - ASCII Animation</a></li>
                 </ul>
             </div>
         </div>
