--- a/w1d6-animation/index.html
+++ b/w1d6-animation/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ASCII Animation</title>
+    <link rel="shortcut icon" type="image/jpg" href="../assets/smiley.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/ascii.css" type="text/css" rel="stylesheet">
     <script src="js/animation.js" type="text/javascript"></script>
