--- a/w1d6-animation/index.html
+++ b/w1d6-animation/index.html
@@ -47,14 +47,14 @@
         </fieldset>
     </div>
     <div id="validate">
-        <a href="https://validator.w3.org/nu/?doc=[your_url_here]">
-            <img src="w3c-html.png" alt="html validator">
+        <a href="https://validator.w3.org/nu/?doc=https://anmaharjan.github.io/w1d6-animation/">
+            <img src="assets/w3c-html.png" alt="html validator">
         </a><br>
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=[your_url_here]">
-            <img src="w3c-css.png" alt="Valid CSS!"></a><br>
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://anmaharjan.github.io/w1d6-animation/">
+            <img src="assets/w3c-css.png" alt="Valid CSS!"></a><br>
 
-        <a href="http://mumstudents.org/jshint/check.php?uri=[your_url_here]">
-            <img src="jslint.png" alt="JavaScript Lint">
+        <a href="http://mumstudents.org/jshint/check.php?uri=https://anmaharjan.github.io/w1d6-animation/">
+            <img src="assets/jslint.jpg" alt="JavaScript Lint">
         </a>
 
 
