--- a/w1d6-animation/index.html
+++ b/w1d6-animation/index.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" type="image/jpg" href="../assets/smiley.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/ascii.css" type="text/css" rel="stylesheet">
-    <script src="js/animation.js" type="text/javascript"></script>
-    <script src="js/ascii.js" type="text/javascript"></script>
+    <script src="js/animation.js"></script>
+    <script src="js/ascii.js"></script>
 </head>
 
 <body>
