--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <li><a href="w1d5-basic-javascript">W1D5 - Basic JavaScript Assignment</a></li>
                     <li><a href="w1d6-animation">W1D6 - ASCII Animation</a></li>
                     <li><a href="w2d1-functional-regex">W2D1 - Functional Programming and RegExp</a></li>
+                    <li><a href="w2d4-inheritance">W2D4 - Inheritance</a></li>
                 </ul>
             </div>
         </div>
