added url at home page

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <li><a href="w1d6-animation">W1D6 - ASCII Animation</a></li>
                     <li><a href="w2d1-functional-regex">W2D1 - Functional Programming and RegExp</a></li>
                     <li><a href="w2d4-inheritance">W2D4 - Inheritance</a></li>
+                    <li><a href="w3d1-class-syntax">W3D1 - Class Syntax</a></li>
                 </ul>
             </div>
         </div>
