added link in home page

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <li><a href="w2d1-functional-regex">W2D1 - Functional Programming and RegExp</a></li>
                     <li><a href="w2d4-inheritance">W2D4 - Inheritance</a></li>
                     <li><a href="w3d1-class-syntax">W3D1 - Class Syntax</a></li>
+                    <li><a href="w3d2-clean-screen">W3D2 - Clean Screen</a></li>
                 </ul>
             </div>
         </div>
