--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <li><a href="w2d4-inheritance">W2D4 - Inheritance</a></li>
                     <li><a href="w3d1-class-syntax">W3D1 - Class Syntax</a></li>
                     <li><a href="w3d2-clean-screen">W3D2 - Clean Screen</a></li>
+                    <li><a href="w3d3-maze">W3D3 - Maze</a></li>
                 </ul>
             </div>
         </div>
