added js checker

--- a/w3d3-maze/index.html
+++ b/w3d3-maze/index.html
@@ -42,5 +42,10 @@ You should download this file for your lab, but you should not edit its contents
 <p>
     Good luck!
 </p>
+<div id="validate">
+    <a href="http://mumstudents.org/jshint/check.php?uri=https://anmaharjan.github.io/w3d3-maze/">
+        <img src="jslint.jpg" alt="JavaScript Lint">
+    </a>
+</div>
 </body>
 </html>
